# Problems

Calendar Problem/: README.md
Calendar Problem/src/: Calendar.java  Main.java  Service.java
Gamification/: CMakeLists.txt  main.cpp
Gamification/domain/badges/: Badge.cpp  Badge.h
Gamification/domain/badgesAchievedByEachUser/: badgesAchieved.cpp  badgesAchieved.h
Gamification/domain/quests/: Quest.cpp  Quest.h
Gamification/domain/user/: User.cpp  User.h
Gamification/domain/userStatus/: UserStatus.cpp  UserStatus.h
Gamification/gui/loginGUI/: LoginWindow.cpp  LoginWindow.h  loginwindow.ui
Gamification/gui/userGUI/: UserWindow.cpp  UserWindow.h  userwindow.ui
Gamification/observer/: Observer.h
Gamification/repository/: TemplatedRepository.h
Gamification/service/loginService/: LoginService.cpp  LoginService.h
Gamification/service/userService/: UserService.cpp  UserService.h
